# text-checker

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_web_app.py  test_cli.py  vercel.json
docs/: requirements.md  text_proofreading_requirements.md  web_proofreading_requirements.md
src/text_proofreader/: __init__.py  main.py  reader.py  reporter.py
src/text_proofreader/checkers/: __init__.py  context_checker.py  expression_checker.py  typo_checker.py
src/text_proofreader/rules/: context_rules.json  expression_rules.json  typo_rules.json
src/web_proofreader/: __init__.py  app.py  word_reader.py
src/web_proofreader/static/css/: style.css
src/web_proofreader/static/js/: comments.js  common.js  editor.js  keyboard.js  upload.js
src/web_proofreader/templates/: base.html  editor.html  index.html
templates/: index.html
tests/: sample_document.txt  sample_text.txt  test_proofreader.py  test_web_proofreader.py
